add browser throttling and user alert challenges

--- a/Paper/bib/references.bib
+++ b/Paper/bib/references.bib
@@ -151,4 +151,21 @@
     }
 
 
+@inproceedings{SHB11,
+	Author = {A Sotirakopoulos and K. Hawkey and K. Beznosov},
+	Booktitle = {SOUPS},
+	Date-Added = {2012-10-12 11:44:23 -0400},
+	Date-Modified = {2012-10-12 11:47:17 -0400},
+	Title = {On the Challenges in Usable Security Lab Studies: Lessons Learned from Replicating a Study on {SSL} Warnings},
+	Year = {2011}}
+	
+	
+@inproceedings{SEAAC09,
+	Author = {J. Sunshine and S. Egelman and H. Almuhimedi and N. Atri and L. F. Cranor},
+	Booktitle = {USENIX Security},
+	Date-Added = {2011-10-13 13:50:23 -0400},
+	Date-Modified = {2011-10-13 13:51:15 -0400},
+	Title = {Crying Wolf: An Empirical Study of {SSL} Warning Effectiveness},
+	Year = {2009}}
+
 
