better definition of cryptojacking

--- a/Paper/sections/body.tex
+++ b/Paper/sections/body.tex
@@ -25,7 +25,7 @@ Bitcoin uses SHA-256 for its hash-based proof-of-work algorithm, which is a CPU-
 Satoshi Nakamoto’s original philosophy and intention for Bitcoin was “one-CPU-one-vote”~\cite{nakamoto2008bitcoin}, which CryptoNight attempts to enforce. In CryptoNight, users vote for the right order of transactions and honest money supply distribution with their CPU power, so the more CPU cores they have the more voting power they acquire. Since CPUs are relatively affordable and accessible, it follows that most users will have approximately equal voting rights. Then by relying on random access to a slow memory and emphasizing latency dependence, it is ensured that proof-of-work is largely controlled by CPUs instead of GPUs or ASICs. This is done by having every new block depended on the previous block’s solution, which must be kept in memory. This algorithm requires approximately 2MB per instance, which fits in the L3 cache of modern processors. Over the course of the next few years, these L3 cache sizes should become mainstream and allow more CPUs, and thus users, to vote in Monero`s ecosystem. It has also been shown that ASICs cannot handle more than 1MB of internal memory, which is less than the size of memory required to calculate a new block. GPUs are also at a disadvantage since GDDR5 memory, which are used in modern GPUs and considered one of the fastest types of memory, is notably slower than L3 cache~\cite{van2013cryptonote}.  
 
 \section{In-Browser Mining}
-In-Browser Mining, Also knowns as Cryptojacking, is defined as stealth use of user's resources (e.g. CPU) in the background to mine cryptocurrencies instead of a standalone native application. In this paper focus is on in-browser cryptojacking, e.g. Javascript code running on websites. The resources consumption could be really high to noticeably effect users` computer performance and even electricity bill. Users` consent is where makes cryptojacking different than regular mining software.
+Cryptojacking\footnote{Also known as Coinjacking, Drive-by mining} , is defined as stealth use of user's resources (e.g. CPU) in the background to mine cryptocurrencies. This paper is focused on in-browser mining, a category of Cryptojacking in which instead of an application or a malware, the process of mining, commonly written in Javascript, happens within the user`s browser by visiting a website. The resources consumption could be really high to noticeably effect users` computer performance and even electricity bill. Users` consent is where makes cryptojacking different than regular mining software.
 
 This allows for more scalability as there is no need to install any additional software on a computer with an internet connection. In the early days of cryptocurrency mining, there was a rise in Bitcoin JavaScript miners such as JSMiner\footnote{A JavaScript Bitcoin miner \url{https://github.com/jwhitehorn/jsMiner}}(2011) and MineCrunch\footnote{Minecrunch, web(JS) miner with integration feature\url{https://cryptocurrencytalk.com/topic/24618-minecrunch-web-js-miner-with-integration-feature/}}(2014). MineCrunch was the more successful of the two since it had a more successful publicity campaign, and its developers maintained an active online presence. Based on the developer claims, the JavaScript miner was well optimized, but worked 1.5x slower than native applications for CPU mining such as CPUMiner\footnote{CPU miner for Litecoin and Bitcoin - \url{https://github.com/pooler/cpuminer}}. However, as the hashing power of the Bitcoin network increased the mining difficulty similarly increased, and mining bitcoins on CPUs became unprofitable. As a result, developers stopped maintaining the codebase of such miners.
 \\
