note section. ethics from Moor(1985) added

--- a/Paper/bib/references.bib
+++ b/Paper/bib/references.bib
@@ -168,4 +168,24 @@
 	Title = {Crying Wolf: An Empirical Study of {SSL} Warning Effectiveness},
 	Year = {2009}}
 
+@article{king2007internet,
+  title={Internet advertising and the generalized second-price auction: Selling billions of dollars worth of keywords},
+  author={King, Mervyn and Atkins, Jill and Schwarz, Michael},
+  journal={The American economic review},
+  volume={97},
+  number={1},
+  pages={242--259},
+  year={2007},
+  publisher={American Economic Association}
+}
 
+@article{moor1985computer,
+  title={What is computer ethics?},
+  author={Moor, James H},
+  journal={Metaphilosophy},
+  volume={16},
+  number={4},
+  pages={266--275},
+  year={1985},
+  publisher={Wiley Online Library}
+}
