--- a/Paper/sections/body.tex
+++ b/Paper/sections/body.tex
@@ -147,4 +147,29 @@ Browser mining has been shown to not be as efficient as native mining applicatio
 This new model of monetizing websites can be a paradigm shift in how advertisement giants monopolize internet traffic. This could lead to re-democratizing the online advertisement ecosystem to make it fairer for smaller players.
 
 
+% ===========================================================================
+
+%'ll add some sections and notes here for the reorg. 
+
+%TODO: Ineeds rewording, ads? "in-browser mining as a replaced monetization strategy" needs a 
+\section{Ethics}
+Coinhive as a big player in the recent rise of In-browser mining, introduced its functionality as a replacement for online advertisement, a new way to monetize website`s traffic. However this will result in a paradigm shift in website monetization. As an example in both auction-based and keyword-based online advertisement, the advertiser pays the ad publisher to distribute the ads and the ad publisher pays a portion of the revenues to the website owner whom the ad was shown on her website~\cite{king2007internet}. However in In-browser mining as a replaced monetization strategy, user is technically paying for the visit on their hydro (electricity) bill, in which the consent of the user becomes an ethical issue. As the concept of traffic revenue begins to change, the values associated with the old concept will have to be reexamined. Moor, in "What is Computer Ethics?" ~\cite{moor1985computer} introduces the concept of \textit{Invisible Factor}, for invisible computer operations in society. Based on his definitions Cryptojacking falls under \textit{Invisible abuse}\footnote{The intentional use of the invisible operations of a computer to engage in unethical conduct}. Here the cryptojacker is earning money from unaware users that are being charged on their hydro bill. 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
