--- a/Paper/sections/body.tex
+++ b/Paper/sections/body.tex
@@ -27,8 +27,22 @@ Satoshi Nakamoto’s original philosophy and intention for Bitcoin was “one-CP
 \section{In-Browser Mining}
 Cryptojacking\footnote{Also known as Coinjacking, Drive-by mining} , is defined as stealth use of user's resources (e.g. CPU) in the background to mine cryptocurrencies. This paper is focused on in-browser mining, a category of Cryptojacking in which instead of an application or a malware, the process of mining, commonly written in Javascript, happens within the user`s browser by visiting a website. The resources consumption could be really high to noticeably effect users` computer performance and even electricity bill. Users` consent is where makes cryptojacking different than regular mining software.
 
-This allows for more scalability as there is no need to install any additional software on a computer with an internet connection. In the early days of cryptocurrency mining, there was a rise in Bitcoin JavaScript miners such as JSMiner\footnote{A JavaScript Bitcoin miner \url{https://github.com/jwhitehorn/jsMiner}}(2011) and MineCrunch\footnote{Minecrunch, web(JS) miner with integration feature\url{https://cryptocurrencytalk.com/topic/24618-minecrunch-web-js-miner-with-integration-feature/}}(2014). MineCrunch was the more successful of the two since it had a more successful publicity campaign, and its developers maintained an active online presence. Based on the developer claims, the JavaScript miner was well optimized, but worked 1.5x slower than native applications for CPU mining such as CPUMiner\footnote{CPU miner for Litecoin and Bitcoin - \url{https://github.com/pooler/cpuminer}}. However, as the hashing power of the Bitcoin network increased the mining difficulty similarly increased, and mining bitcoins on CPUs became unprofitable. As a result, developers stopped maintaining the codebase of such miners.
-\\
+\subsection{Early days}
+The idea of in-browser mining started on early days of Bitcoin in 2011, with Bitcoin Plus\footnote{Bitcoin For the Uninitiated: Now, A Browser-Based Mining Client  May 19th, 2011\url{https://www.themarysue.com/browser-based-bitcoin-mining/}} which resulted in more discussions on replacing ads with Bitcoin browser miners\footnote{BitCoin browser mining as a replacement for ads \url{https://www.reddit.com/r/Bitcoin/comments/ieaew/bitcoin_browser_mining_as_a_replacement_for_ads/}}. This allows for more scalability as there is no need to install any additional software on a computer with an internet connection. Soon after there was a rise in Bitcoin JavaScript miners such as JSMiner\footnote{A JavaScript Bitcoin miner \url{https://github.com/jwhitehorn/jsMiner}}(2011) and MineCrunch\footnote{Minecrunch, web(JS) miner with integration feature\url{https://cryptocurrencytalk.com/topic/24618-minecrunch-web-js-miner-with-integration-feature/}}(2014). MineCrunch was the more successful of the two since it had a more publicity successful campaign, and its developers maintained an active online presence. Based on the developer claims, the JavaScript miner was well optimized, but worked 1.5x slower than native applications for CPU mining such as CPUMiner\footnote{CPU miner for Litecoin and Bitcoin - \url{https://github.com/pooler/cpuminer}}. Although CPU mining was not profitable, it became a safe haven for botnet admins to experiment on the thousands of CPUs. Turning access to money, which resulted in many mining malwares (botnets) on personal computers~\cite{huang2014botcoin}~\cite{wyke2012zeroaccess}, enterprise and clouds~\cite{MiningonSOeDime2017}.
+
+\subsection{From one CPU to ASICS and Mining pools}
+In early days of Bitcoin mining, the mining softwares used CPU resources to run the mining algorithm. The first block mined on a GPU happened on July 18th, 2010 by a user named ArtForz\footnote{bitcoinhistory} using private mining code that he wrote himself, however it was until mid 2011 that others started implementing and releasing mining softwares for GPUs to facilitate the mining efficiency using more powerful GPUs which resulted in parallelizing multiple GPUs for more hashing power, also known as Mining rigs. It wasn't long after that people started working on FPGA mining hardwares for even more hashing power\footnote{Custom FPGA Board for Sale! (August 18, 2011) \url{https://bitcointalk.org/index.php?topic=37904.0}}. 
+Consequently, the hashing power of the Bitcoin network increased so did the mining difficulty. A desktop PC CPU mining at 10 MH/s can expect to mine 425 years before finding a  block and earning the bitcoin reward ~\cite{huang2014botcoin}. 
+
+%% CONT HERE!! 
+
+This resulted in another approach for making mining more profitable --> mining pools
+
+first block on mining pool December 16, 2010 operated by slush
+
+
+
+\subsection{Monero browser mining}
 Monero built on its early success and continued to gain in popularity over the years, which caught the attention of some developers who decided to revisit the idea of browser mining. One of the earliest efforts appeared in September 2017 and was called Coinhive~\cite{coinhive}. Soon after a competitor named Crypto-Loot\footnote{Crypto-Loot - A web Browser Miner | Traffic Miner | CoinHive Alternative \url{https://crypto-loot.com/}} emerged. Both websites provided APIs\footnote{Application programming interface} to developers for implementing browser mining on their websites that used their visitors` CPU resources to mine Monero. A portion of mined Monero would go back to the API developer, and the rest would be kept by the website. Not long after their early success, several copycats appeared such as Coin-Have and PPoi~\cite{coinhivecopycats} to take part in the reborn practice. It even inspired a new coin specifically designed for browser mining named JSECoin\footnote{JSEcoin – Website Cryptocurrency Mining \url{https://jsecoin.com/}}, which has yet to find an audience. These developments took place over the course of a few weeks, which signalled the renewed success of browser mining. However, Coinhive`s approach as a legitimate group set it apart from its peers and established itself as the leader in the space. They also launched separate services such as proof-of-work CAPTCHAs and short-links, which could be used to prevent spam while mining Monero~\cite{coinhive}.
 
 %TODO: explain what mining pool is? More explanations on how they work?
@@ -52,11 +66,9 @@ It seems that there has been more interest in Coinhive than the broader, related
 
 The next step was to see how many websites are deploying Coinhive scripts by using internet scanners such as Zmap\footnote{\url{https://zmap.io}}. It was of more interest to see what the trend of this usage was, and for this purpose historical data was required. 
 
-%\begin{lstlisting}[caption={BigQuery SQL query to find websites using coinhive miner script using censys.io datasets},label={lst:bigquery},language=sql,linewidth=\linewidth]
-%SELECT domain, tags, p80.http_www.get.headers.content_language, p80.http_www.get.headers.server, p80.http.get.headers.x_powered_by, p80.http.get.title , p80.http_www.get.body as wwwbody, p80.http.get.body as plainbody
-%FROM `censys-io.domain_public.20171123`
-%WHERE STRPOS(p80.http.get.body, 'coinhive.min.js') >0 or STRPOS(p80.http_www.get.body, 'coinhive.min.js') >0)
-%\end{lstlisting}
+\begin{lstlisting}[caption={BigQuery SQL query to find websites using coinhive miner script using censys.io datasets},label={lst:bigquery},language=sql,linewidth=\linewidth]
+SELECT domain, tags, p80.http_www.get.headers.content_language, p80.http_www.get.headers.server, p80.http.get.headers.x_powered_by, p80.http.get.title, p80.http_www.get.body as wwwbody, p80.http.get.body as plainbody FROM \`censys-io.domain_public.20171123` WHERE STRPOS(p80.http.get.body, 'coinhive.min.js') >0 or STRPOS(p80.http_www.get.body, 'coinhive.min.js') >0)
+\end{lstlisting}
 
 Using censys.io BigQuery dataset ~\cite{censys15}, it is feasible to query for such trends. The method used to gather these data is simply looking for the `coinhive.min.js` script within the body of the website page, however these services are evolving to obfuscate or use randomized URLs to prevent detection\footnote{\url{https://twitter.com/bad_packets/status/940333744035999744}}.
 
@@ -153,7 +165,7 @@ This new model of monetizing websites can be a paradigm shift in how advertiseme
 
 %TODO: Ineeds rewording, ads? "in-browser mining as a replaced monetization strategy" needs a 
 \section{Ethics}
-Coinhive as a big player in the recent rise of In-browser mining, introduced its functionality as a replacement for online advertisement, a new way to monetize website`s traffic. However this will result in a paradigm shift in website monetization. As an example in both auction-based and keyword-based online advertisement, the advertiser pays the ad publisher to distribute the ads and the ad publisher pays a portion of the revenues to the website owner whom the ad was shown on her website~\cite{king2007internet}. However in In-browser mining as a replaced monetization strategy, user is technically paying for the visit on their hydro (electricity) bill, in which the consent of the user becomes an ethical issue. As the concept of traffic revenue begins to change, the values associated with the old concept will have to be reexamined. Moor, in "What is Computer Ethics?" ~\cite{moor1985computer} introduces the concept of \textit{Invisible Factor}, for invisible computer operations in society. Based on his definitions Cryptojacking falls under \textit{Invisible abuse}\footnote{The intentional use of the invisible operations of a computer to engage in unethical conduct}. Here the cryptojacker is earning money from unaware users that are being charged on their hydro bill. 
+Coinhive as a big player in the recent rise of in-browser mining, introduced its functionality as a replacement for online advertisement, a new way to monetize website`s traffic. However this will result in a paradigm shift in website monetization. As an example in both auction-based and keyword-based online advertisement, the advertiser pays the ad publisher to distribute the ads and the ad publisher pays a portion of the revenues to the website owner whom the ad was shown on her website~\cite{king2007internet}. However in in-browser mining as a replacement monetization strategy, user is technically paying for the visit on their hydro (electricity) bill, in which the consent of the user becomes an ethical issue. As the concept of traffic revenue begins to change, the values associated with the old concept will have to be reexamined. Moor, in "What is Computer Ethics?" ~\cite{moor1985computer} introduces the concept of \textit{Invisible Factor}, for invisible computer operations in society. Based on his definitions cryptojacking falls under \textit{Invisible abuse}\footnote{The intentional use of the invisible operations of a computer to engage in unethical conduct}. Here the cryptojacker is earning money from unaware users that are being charged on their hydro bill. 
 
 
 
