--- a/Paper/bib/references.bib
+++ b/Paper/bib/references.bib
@@ -189,3 +189,52 @@
   year={1985},
   publisher={Wiley Online Library}
 }
+
+
+@InProceedings{MiningonSOeDime2017,
+author="Tahir, Rashid
+and Huzaifa, Muhammad
+and Das, Anupam
+and Ahmad, Mohammad
+and Gunter, Carl
+and Zaffar, Fareed
+and Caesar, Matthew
+and Borisov, Nikita",
+editor="Dacier, Marc
+and Bailey, Michael
+and Polychronakis, Michalis
+and Antonakakis, Manos",
+title="Mining on Someone Else's Dime: Mitigating Covert Mining Operations in Clouds and Enterprises",
+booktitle="Research in Attacks, Intrusions, and Defenses",
+year="2017",
+publisher="Springer International Publishing",
+address="Cham",
+pages="287--310",
+abstract="Covert cryptocurrency mining operations are causing notable losses to both cloud providers and enterprises. Increased power consumption resulting from constant CPU and GPU usage from mining, inflated cooling and electricity costs, and wastage of resources that could otherwise benefit legitimate users are some of the factors that contribute to these incurred losses. Affected organizations currently have no way of detecting these covert, and at times illegal miners and often discover the abuse when attackers have already fled and the damage is done.",
+isbn="978-3-319-66332-6"
+}
+
+@article{wyke2012zeroaccess,
+  title={The zeroaccess botnet: Mining and fraud for massive financial gain},
+  author={Wyke, James},
+  journal={Sophos Technical Paper},
+  year={2012}
+}
+
+@inproceedings{huang2014botcoin,
+  title={Botcoin: Monetizing Stolen Cycles.},
+  author={Huang, Danny Yuxing and Dharmdasani, Hitesh and Meiklejohn, Sarah and Dave, Vacha and Grier, Chris and McCoy, Damon and Savage, Stefan and Weaver, Nicholas and Snoeren, Alex C and Levchenko, Kirill},
+  booktitle={NDSS},
+  year={2014}
+}
+
+
+
+@misc{bitcoinhistory,
+  title={Important milestones of the Bitcoin project},
+  author={VA - Wikipedia},
+  year={2009},
+  howpublished = {\url{https://en.bitcoin.it/wiki/Category:History}},
+  note = {Accessed: 2018-01-18},
+}
+
