some on profitability

--- a/Paper/sections/body.tex
+++ b/Paper/sections/body.tex
@@ -109,6 +109,9 @@ Most of these scripts discovered were defaulted to use around 25\% of user`s CPU
 
 \subsection{\textbf{Profitability Experiment}}
 \label{profitabilitexperiment}
+
+Coinhive developers estimate a monthly revenue of about 0.3 XMR (~\$101) for a website with 10-20 active miners, which would be users with longer duration of visit on the website~\cite{coinhive}.
+
 By reaching out to one of the biggest coinhive campaigns operator, which was a domain parking service and was running coinhive script on over 11,000 parked websites, conducted over period of three months, we were able to gather some data to estimate profitability for websites with high traffic but short visits \footnote{Thanks to Faraz Fallahi \url{https://github.com/fffaraz}}. Over 97,000 users visited these websites for an average of 24 seconds per session.
 
 \begin{figure}[t]
