--- a/Paper/sections/body.tex
+++ b/Paper/sections/body.tex
@@ -66,6 +66,11 @@ Coinhive and other similar websites, are simply Monero mining pools which offer 
 %\caption{Attack vectors to inject miner scripts in webpages}
 %\end{figure}
 
+
+
+
+%TODO: Expand here
+
 \section{Threat (?) Model}
 The attack surface to abuse users' browsers is broad, there are different actors whom can abuse this functionality for their own profit without user consent nor knowledge. There are multiple vectors a malicious actor can inject mining scripts in the website's codebase:
 
@@ -163,6 +168,9 @@ Most of these scripts discovered were defaulted to use around 25\% of user`s CPU
 Coinhive developers estimate a monthly revenue of about 0.3 XMR (~\$101) for a website with 10-20 active miners, which would be users with longer duration of visit on the website~\cite{coinhive}.
 
 Through correspondence with one of the biggest coinhive campaigns operator, which was a domain parking service and was running coinhive script on over 11,000 parked websites, conducted over period of three months, we were able to gather some data to estimate profitability for websites with high traffic but short visits \footnote{Thanks to Faraz Fallahi \url{https://github.com/fffaraz}}. Over 97,000 users visited these websites for an average of 24 seconds per session.
+
+
+%TODO: Separate these charts
 
 \begin{figure}[t]
 \centering
