fix citations and more on thread models

--- a/Paper/bib/references.bib
+++ b/Paper/bib/references.bib
@@ -238,3 +238,51 @@ isbn="978-3-319-66332-6"
   note = {Accessed: 2018-01-18},
 }
 
+
+
+@misc{coinhiveonchildporn,
+  title={Massive child porn site is hiding in plain sight, and the owners behind it},
+  author={Sijmen Ruwhof},
+  year={2017},
+  howpublished = {\url{https://sijmen.ruwhof.net/weblog/1782-massive-child-porn-site-is-hiding-in-plain-sight-and-the-owners-behind-it}},
+  note = {Accessed: 2018-01-20},
+}
+
+
+@misc{politifactcoinhive,
+  title={Hackers have turned Politifact’s website into a trap for your PC},
+  author={Washingtonpost},
+  year={2017},
+  howpublished = {\url{https://www.washingtonpost.com/news/the-switch/wp/2017/10/13/hackers-have-turned-politifacts-website-into-a-trap-for-your-pc}},
+  note = {Accessed: 2018-01-20},
+}
+
+
+@misc{politifactcoinhivewsj,
+  title={Your Computer May Be Making Bitcoin​ for Hackers},
+  author={WallStreetJournal},
+  year={2017},
+  howpublished = {\url{https://www.wsj.com/articles/hackers-latest-move-using-your-computer-to-mine-bitcoin-1509102002}},
+  note = {Accessed: 2018-01-20},
+}
+
+
+
+@misc{googletagcoinhive,
+  title={Crypto-jackers enlist Google Tag Manager to smuggle alt-coin miners},
+  author={theRegister},
+  year={2017},
+  howpublished = {\url{https://www.theregister.co.uk/2017/11/22/cryptojackers_google_tag_manager_coin_hive/}},
+  note = {Accessed: 2018-01-20},
+}
+
+
+@misc{chromeextentioncoinhive,
+  title={Popular Google Chrome Extension Caught Mining Cryptocurrency on Thousands of Computers},
+  author={fortune},
+  year={2017},
+  howpublished = {\url{http://fortune.com/2018/01/02/google-chrome-extension-cryptocurrency-mining-monero/}},
+  note = {Accessed: 2018-01-20},
+}
+
+
