--- a/Paper/sections/body.tex
+++ b/Paper/sections/body.tex
@@ -45,7 +45,7 @@ More importantly, Monero differs in the way its currency is mined by employing a
 
 Bitcoin uses SHA-256 for its hash-based proof-of-work algorithm, which is a CPU-bound function. This allows miners to use ASIC devices to increase their calculation speeds, which greatly surpasses an ordinary computer in hashes per unit of money. CryptoNight uses a memory-bound function, which relies on a situation where the time taken to complete a given computational problem is decided primarily by the amount of memory required to hold data. This limits the ability for pipelining, which is also known as instruction-level parallelism.  
 
-Satoshi Nakamoto'€™s original philosophy and intention for Bitcoin was â€œone-CPU-one-voteâ€~\cite{nakamoto2008bitcoin}, which CryptoNight attempts to enforce. In CryptoNight, users vote for the right order of transactions and honest money supply distribution with their CPU power, so the more CPU cores they have the more voting power they acquire. Since CPUs are relatively affordable and accessible, it follows that most users will have approximately equal voting rights. Then by relying on random access to a slow memory and emphasizing latency dependence, it is ensured that proof-of-work is largely controlled by CPUs instead of GPUs or ASICs. This is done by having every new block depended on the previous blockâ€™s solution, which must be kept in memory. This algorithm requires approximately 2MB per instance, which fits in the L3 cache of modern processors. Over the course of the next few years, these L3 cache sizes should become mainstream and allow more CPUs, and thus users, to vote in Monero`s ecosystem. It has also been shown that ASICs cannot handle more than 1MB of internal memory, which is less than the size of memory required to calculate a new block. GPUs are also at a disadvantage since GDDR5 memory, which are used in modern GPUs and considered one of the fastest types of memory, is notably slower than L3 cache~\cite{van2013cryptonote}.  
+Satoshi Nakamoto's original philosophy and intention for Bitcoin was ``one-CPU-one-vote``~\cite{nakamoto2008bitcoin}, which CryptoNight attempts to enforce. In CryptoNight, users vote for the right order of transactions and honest money supply distribution with their CPU power, so the more CPU cores they have the more voting power they acquire. Since CPUs are relatively affordable and accessible, it follows that most users will have approximately equal voting rights. Then by relying on random access to a slow memory and emphasizing latency dependence, it is ensured that proof-of-work is largely controlled by CPUs instead of GPUs or ASICs. This is done by having every new block depended on the previous block`s solution, which must be kept in memory. This algorithm requires approximately 2MB per instance, which fits in the L3 cache of modern processors. Over the course of the next few years, these L3 cache sizes should become mainstream and allow more CPUs, and thus users, to vote in Monero`s ecosystem. It has also been shown that ASICs cannot handle more than 1MB of internal memory, which is less than the size of memory required to calculate a new block. GPUs are also at a disadvantage since GDDR5 memory, which are used in modern GPUs and considered one of the fastest types of memory, is notably slower than L3 cache~\cite{van2013cryptonote}.  
 
 
 \subsection{Coinhive}
@@ -76,26 +76,25 @@ The attack surface to abuse users' browsers is broad, there are different actors
 
 \subsection{Webmaster initiated} 
 
-As discussed before, the website administrator can add the script to the webpage without informing users. Website owners may choose to monetize their site with cryptojacking scripts if they have been blacklisted or blocked by standard advertising platforms. In one example, Dutch researcher Sijmen Ruwhof found Coinhive on a large Russian website offering child pornography to users. In this case, revenue estimates, based on the website traffic data available, were roughly $10,000 a month after converting the value of XMR mined to USD. (Cite: https://sijmen.ruwhof.net/weblog/1782-massive-child-porn-site-is-hiding-in-plain-sight-and-the-owners-behind-it)
+As discussed before, the website administrator can add the mining script to the webpage without informing users. Website owners may choose to monetize their site with cryptojacking scripts if they have been blacklisted or blocked by standard advertising platforms. In one example, Dutch researcher Sijmen Ruwhof found Coinhive on a large Russian website offering child pornography to users. In this case, revenue estimates, based on the website traffic data available, were roughly $10,000 a month after converting the value of XMR mined to USD~\cite{coinhiveonchildporn}
 
 \subsection{Ad network} 
 
 Similar to the claimed Showtime case~\cite{showtimehive}, the advertisement publisher can inject miner script to any website they have ad space in instead of showing legitimate ads (more on this in User Impact section).
 
 \subsection{Breached website} 
+An attacker can hack a service provider's codebase and inject their mining code to the one or many websites at once, simply turning access to money. A recent example of this type of attack, discovered on Thanksgiving Day by security researcher Troy Mursch, occurred to LiveHelpNow's SDK that resulted in unsolicited mining when accessing their chat system through all website using the char support service~\cite{chatsupporthack}.
 
-On October 13, Coinhive was found on the political fact-checking website Politifact. A compromised JavaScript library was found to be injecting the cryptojacking scripts. The malicious code remained on the site for at least four hours before it was removed. (Cite: https://www.washingtonpost.com/news/the-switch/wp/2017/10/13/hackers-have-turned-politifacts-website-into-a-trap-for-your-pc/)In a statement provided to The Wall Street Journal, PolitiFact Executive Director Aaron Sharockman stated, “Hackers were able to install their script on the fact-checking website after discovering a misconfigured cloud-computing server.” (Cite: https://www.wsj.com/articles/hackers-latest-move-using-your-computer-to-mine-bitcoin-1509102002)
-
-An attacker can hack a service provider's codebase and inject their mining code to the numerous websites at once. A recent example of this type of attack, discovered on Thanksgiving Day by security researcher Troy Mursch, occurred to LiveHelpNow's SDK that resulted in unsolicited mining when accessing their chat system through a website~\cite{chatsupporthack}.
+On October 13, Coinhive was found on the political fact-checking website Politifact\footnote{PolitiFact: Fact-checking US politics \url{https://politifact.com/}}. A compromised JavaScript library was found to be injecting the cryptojacking scripts. The malicious code remained on the site for at least four hours before it was removed~\cite{politifactcoinhive}. In a statement provided to The Wall Street Journal, PolitiFact Executive Director Aaron Sharockman stated ``Hackers were able to install their script on the fact-checking website after discovering a misconfigured cloud-computing server.`` ~\cite{politifactcoinhivewsj}.
 
 \subsection{Man-in-the-middle attack} 
 
 Any internet service provider or free public wireless connection can inject the script to all the plain text traffic that goes through their routers. Advertisement code injection has been seen in practice ~\cite{vergeadinjection}. Also there have been reports of similar injections of browser mining scripts at certain Starbucks free Wi-Fi hotspots\footnote{\url{https://twitter.com/imnoah/status/936948776119537665}}.
 
-In two separate incidents, Coinhive was injected into the websites of Globovisión and Movistar using Google Tag Manager. Movistar stated that Coinhive was not put on their website by a hacker, but instead was due to “an internal error” while they were conducting “pre-production tests.” No statement was provided by Globovisión on why the cryptojacking scripts appeared on their site on November 15, 2017. (Cite: https://www.theregister.co.uk/2017/11/22/cryptojackers_google_tag_manager_coin_hive/)
+In two separate incidents, Coinhive was injected into the websites of Globovision\footnote{Globovision is a 24-hour television news network in Venezuela and Latin America.\url{http://globovision.com/}} and Movistar\footnote{Movistar is a major telecommunications brand owned by Telefonica, operating in Spain and in many Hispanic American countries \url{https://www.movistar.com/}} using Google Tag Manager\footnote{Google Tag Manager is a tag management system created by Google to manage JavaScript and HTML tags used for tracking and analytics on websites}. Movistar stated that Coinhive was not put on their website by a hacker, but instead was due to \textit{``internal error``} while they were conducting ``production tests``. No statement was provided by Globovision on why the cryptojacking scripts appeared on their site on November 15, 2017~\cite{googletagcoinhive}.
 
-\subsection{Browser extensions} 
-Cryptojacking was not limited to websites in 2017 as we saw Chrome extensions also being affected. One such extension, Archive Poster, remained on the Chrome Web Store for days while silently cryptojacking an unknown portion of their 100,000+ users. Despite multiple user reports, Google’s security team did not remove the extension until multiple news media outlets covered the issue. (Cite: http://fortune.com/2018/01/02/google-chrome-extension-cryptocurrency-mining-monero/)
+\subsection{Other Browser related vectors} %TODO: maybe a better title? 
+Cryptojacking was not limited to websites in 2017 as we saw Chrome extensions also being affected. One such extension, Archive Poster, remained on the Chrome Web Store for days while silently cryptojacking an unknown portion of their 100,000+ users. Despite multiple user reports, Google`s security team did not remove the extension until multiple news media outlets covered the issue~\cite{chromeextentioncoinhive}. 
 
 Clickjacking and consent
 
